--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-eduice-primary (1.0) jammy; urgency=low
+edu-primary (1.0) unstable; urgency=low
 
   * First version
 
- -- MountainOS <mountainoslinux@gmail.com>  Sat, 18 Mar 2023 10:17:22 +0000
+ -- MountainOS <mountainoslinux@gmail.com>  Sat, 27 Apr 2024 15:24:03 +0100
